expand page when code box is larger

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,10 +1,10 @@
 doctype html
 html
   head
-    title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
+    title Phaser Sandbox
     link(rel='stylesheet', href='/stylesheets/lib/codemirror.css')
     link(rel='stylesheet', href='/stylesheets/lib/pastel-on-dark.css')
+    link(rel='stylesheet', href='/stylesheets/style.css')
   body
     block content
     block template
